<resources>
    <string name="app_name">LetsTalk</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="talk">Talk</string>
    <string name="chats">Chats</string>
    <string name="talks">Talks</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_birthyear">Enter your birth year</string>
    <string name="gender">Gender</string>
    <string name="gender_m">M</string>
    <string name="gender_f">F</string>
    <string name="sing_up_with_fb">Sing up with Facebook</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_email">Enter Username</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Firebase Database Secret -->
    <string name="my_firebase_key">AIzaSyD4yKLH4sNvt8X793ymSZtLIcHEH7HnkZ8</string>
    <string name="my_firebase_secret">9XwR9KcdZoqfWnfUF1N19jpiiIgvrl7JvrrIp7Td</string>
    <string name="tab_sign_up">Sign Up</string>
    <string name="tab_sign_in">Sign In</string>
    <string name="sing_in_with_fb">Sign in with Facebook</string>

    <!-- Facebook Id -->
    <string name="facebook_app_id">1203077203071376</string>
    <string name="title_activity_testt">Testt</string>

    <!-- Speech Recognition -->
    <string name="speech_not_supported">The Language is not supported</string>
    <string name="speech_prompt">Share now</string>
    <string name="return_to_chat">Return to chat</string>
    <string name="action_sing_out">Sing Out</string>
    <string name="action_become_advisor">Become Advisor</string>

    <!-- Navigation Drawer Text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Schedule -->
    <string name="schedule_fail">Set proper hours: e.g. 19:30</string>

    <!-- Account -->
    <string name="account_prices">Prices: </string>
    <string name="account_chats">Your Chats: </string>
    <string name="account_paid_chats">Paid Chats: </string>
    <string name="account_buy_chat">Buy Chat </string>
    <string name="account_buy_talk">Buy Talk </string>
    <string name="account_talks">Your Talks: </string>
    <string name="account_paid_talks">Paid Talks: </string>
    <string name="account_item">Item</string>
    <string name="account_baht">THB</string>
    <string name="account_euro">EUR</string>
    <string name="account_item_chat">1 Chat</string>
    <string name="account_item_talk">1 Talk</string>
    <string name="account_price_chat_baht">1</string>
    <string name="account_price_chat_euro">0.03</string>
    <string name="account_price_talk_baht">15</string>
    <string name="account_price_talk_euro">0.40</string>
    <string name="account_duration_title">Duration</string>
    <string name="account_duration">15 MIN</string>

    <string name="purchase_successful">Purchase Successful!</string>
    <string name="purchase_unsuccessful">Purchase Not Successful!</string>
</resources>
