<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_sign_up_one"
    tools:context=".activity.sign_in.SignUpFragmentOne">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <AutoCompleteTextView
            android:id="@+id/enter_birth_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_birthyear"
            android:textColor="@color/text"
            android:inputType="date"
            android:textSize="@dimen/sign_in_text_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/text"
            android:textSize="@dimen/sign_in_text_size"
            android:layout_alignTop="@+id/gender_radio_buttons"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="5dp"
            android:paddingRight="50dp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gender_radio_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_birth_year"
            android:layout_toEndOf="@+id/gender"
            android:layout_toRightOf="@+id/gender"
            android:orientation="horizontal"
            android:textColor="@color/text">

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/gender_m"
                android:textColor="@color/text"
                android:theme="@style/MyRadioButton"
                android:paddingRight="20dp"
                android:textSize="@dimen/sign_in_text_size"/>

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/gender_f"
                android:textColor="@color/text"
                android:theme="@style/MyRadioButton"
                android:textSize="@dimen/sign_in_text_size" />
        </RadioGroup>

        <Button
            android:id="@+id/button_next1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/arrow"
            android:layout_alignBottom="@+id/gender_radio_buttons"
            android:layout_toRightOf="@+id/btn_fb"
            android:layout_toEndOf="@+id/btn_fb"/>

        <Button
            android:id="@+id/btn_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/fb"
            android:drawablePadding="7dp"
            android:text="@string/sing_up_with_fb"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sign_in_text_size"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="50dp"
            android:layout_below="@+id/gender"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="you will remain anonymous"
            android:paddingTop="3dp"
            android:textColor="@color/text"
            android:id="@+id/textViewFacebook"
            android:layout_below="@+id/btn_fb"
            android:layout_centerHorizontal="true" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/textViewFacebook"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>
